--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,12 +54,14 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   country_picker: ^2.0.20
   csc_picker: ^0.2.7
-  intl: ^0.18.1
+  intl:
   json_annotation: ^4.8.1
   google_maps_flutter: ^2.3.0
   firebase_messaging: ^14.6.3
   flutter_local_notifications: ^14.1.1
   flutter_pinned_shortcut: ^0.0.4
+  timezone: ^0.9.2
+  date_time_picker: ^2.1.0
 
 dev_dependencies:
   json_serializable: ^6.7.0
